Add a view that enables a user to revoke a token that was previously retrieved

--- a/ebay_accounts/templates/ebay_accounts/account_detail.html
+++ b/ebay_accounts/templates/ebay_accounts/account_detail.html
@@ -7,4 +7,10 @@
 
 <p>{% blocktrans with expires=object.expires %}Expires at {{ expires }}{% endblocktrans %}</p>
 
+<form method="post" action="{% url 'ebay_accounts_account_revoke_token' object.pk %}">
+    {% csrf_token %}
+    {{ revoke_form.as_p }}
+    <button id="id_submit" class="button">{% trans "Revoke Token" %}</button>
+</form>
+
 {% endblock body %}
