--- a/ebay_accounts/templates/ebay_accounts/privacy_policy.html
+++ b/ebay_accounts/templates/ebay_accounts/privacy_policy.html
@@ -1,3 +1,4 @@
 {% include 'ebay_accounts/base.html' %}
+{% load i18n %}
 
 <p>{% trans "Override this template and put your privacy policy here" %}</p>
